Nutch Change Log

Current Development

* NUTCH-1725 CleaningJob's reducer does not commit deleted docs. (ilhamikalkan via talat)

* NUTCH-1728 indexer-solr plugin is not delete docs from Solr (ilhamikalkan via talat)

* NUTCH-1753 Eclipse dependecy problem for 2.x (talat)

* NUTCH-1720 Duplicate lines in HttpBase.java (Walter Tietze via jnioche)

* NUTCH-797 URL not properly constructed when link target begins with a "?" (Doug Cook, Robert Hohman, Stondet, ab via snagel)

* NUTCH-1759 Upgrade to Crawler Commons 0.4 (jnioche)

* NUTCH-1700 Remove deprecated code in src/plugin/creativecommons/build.xml (lewismc)

* NUTCH-1761 Crawl script fails to find job file if not started from inside bin dir (David Hosking, jnioche)

* NUTCH-1603 ZIP parser complains about truncated PDF file (snagel via lewismc)

* NUTCH-1743 parsechecker to show outlinks (snagel)

* NUTCH-1732 Better cmd line parsing for NutchServer (Fjodor Vershinin via lewismc)

* NUTCH-1751 Empty anchors should not index (Sertac TURKEL via lewismc)

* NUTCH-1733 parse-html to support HTML5 charset definitions (snagel)

* NUTCH-1727 Configurable length for Tlds (Sertac TURKEL via lewismc)

* NUTCH-1738 Expose number of URLs generated per batch in GeneratorJob (Talat UYARER via lewismc)

* NUTCH-1671 indexchecker to add digest field (snagel, lufeng)

* NUTCH-1645 Junit Test Case for Adaptive Fetch Schedule class (Yasin Kılınç, lufeng, Sertac TURKEL via snagel)

* NUTCH-1478 Parse-metatags and index-metadata plugin for Nutch 2.x series (kiran, Nguyen Manh Tien, Talat UYARER, Vangelis Karvounis via lewismc)

* NUTCH-1729 Upgrade to Tika 1.5 (jnioche)

* NUTCH-1721 Upgrade to Crawler commons 0.3 (tejasp)

* NUTCH-1719 DomainStatistics fails in 2.x because URL is not unreversed (Gerhard Gossen via lewismc)

* NUTCH-1253 Incompatable neko and xerces versions (snagel, lewismc, Talat UYARER)

* NUTCH-1715 RobotRulesParser adds additional '*' to the robots name (tejasp)
